# GameKit

./: .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO
doc/: Doxyfile
examples/sample/: CMakeLists.txt
examples/sample/include/: Application.hpp  GameState.hpp
examples/sample/shaders/: game.f.glsl
examples/sample/source/: Application.cpp  GameState.cpp  main.cpp
include/gk/: audio.hpp  core.hpp  graphics.hpp  resource.hpp  scene.hpp
include/gk/audio/: AudioPlayer.hpp  BackgroundMusic.hpp  Music.hpp  Sound.hpp  SoundEffect.hpp
include/gk/core/: ApplicationState.hpp  ApplicationStateStack.hpp  ArgumentParser.hpp  Box.hpp  Color.hpp  Config.hpp  CoreApplication.hpp  Debug.hpp  EventHandler.hpp  EventListenerList.hpp  Exception.hpp  Filesystem.hpp  GameClock.hpp  ISerializable.hpp  IntTypes.hpp  KeyboardUtils.hpp  LogStream.hpp  Logger.hpp  LoggerHandler.hpp  LoggerUtils.hpp  Mouse.hpp  Rect.hpp  SDLHeaders.hpp  SDLLoader.hpp  Timer.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Window.hpp  XMLFile.hpp
include/gk/core/input/: GameKey.hpp  GamePad.hpp  InputHandler.hpp  KeyboardHandler.hpp  KeyboardUtils.hpp
include/gk/gl/: Camera.hpp  Drawable.hpp  GLCheck.hpp  IDrawable.hpp  OpenGL.hpp  RenderStates.hpp  RenderTarget.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  View.hpp
include/gk/graphics/: BoxShape.hpp  Color.hpp  Font.hpp  Image.hpp  RectangleShape.hpp  Sprite.hpp  SpriteAnimation.hpp  Text.hpp  TextInput.hpp  TiledImage.hpp  Tilemap.hpp  Tileset.hpp
include/gk/graphics/tilemap/: TilemapAnimator.hpp  TilemapRenderer.hpp
include/gk/gui/: Font.hpp  Image.hpp  RectangleShape.hpp  Sprite.hpp  Text.hpp
include/gk/math/: Math.hpp
include/gk/resource/: AudioPlayer.hpp  IResourceLoader.hpp  ResourceHandler.hpp  TextureLoader.hpp  TilemapLoader.hpp  TilesetLoader.hpp
include/gk/scene/: CollisionHelper.hpp  Scene.hpp  SceneObject.hpp  SceneObjectList.hpp
include/gk/scene/behaviour/: Behaviour.hpp  EasyBehaviour.hpp
include/gk/scene/component/: BehaviourComponent.hpp  CollisionComponent.hpp  HealthComponent.hpp  HitboxComponent.hpp  LifetimeComponent.hpp  MovementComponent.hpp  PositionComponent.hpp
include/gk/scene/controller/: AbstractController.hpp  BehaviourController.hpp  EasyController.hpp  LifetimeController.hpp  MovementController.hpp
include/gk/scene/movement/: EasyMovement.hpp  GamePadMovement.hpp  Movement.hpp
include/gk/scene/view/: AbstractView.hpp  EasyView.hpp  HitboxView.hpp  SpriteView.hpp
include/gk/system/: Debug.hpp  Exception.hpp
include/gk/utils/: NonCopyable.hpp
include/system/: Debug.hpp
misc/: header_cpp.txt  update_headers.sh
source/: CMakeLists.txt
source/audio/: AudioPlayer.cpp  Music.cpp  Sound.cpp
source/core/: ApplicationStateStack.cpp  ArgumentParser.cpp  Color.cpp  CoreApplication.cpp  Filesystem.cpp  GameClock.cpp  ISerializable.cpp  KeyboardUtils.cpp  Logger.cpp  LoggerHandler.cpp  LoggerUtils.cpp  Mouse.cpp  SDLLoader.cpp  Timer.cpp  Utils.cpp  Window.cpp  XMLFile.cpp
source/core/input/: GamePad.cpp  InputHandler.cpp  KeyboardHandler.cpp  KeyboardUtils.cpp
source/gk/: AudioPlayer.cpp  BackgroundMusic.cpp  SoundEffect.cpp
source/gl/: Camera.cpp  GLCheck.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  View.cpp
source/graphics/: BoxShape.cpp  Color.cpp  Font.cpp  Image.cpp  RectangleShape.cpp  Sprite.cpp  SpriteAnimation.cpp  Text.cpp  TextInput.cpp  TiledImage.cpp  Tilemap.cpp  Tileset.cpp
source/graphics/tilemap/: TilemapAnimator.cpp  TilemapRenderer.cpp
source/gui/: Font.cpp  Image.cpp  RectangleShape.cpp  Sprite.cpp  SpriteAnimation.cpp  Text.cpp
source/resource/: AudioPlayer.cpp  ResourceHandler.cpp  TextureLoader.cpp  TilemapLoader.cpp  TilesetLoader.cpp
source/scene/: CollisionHelper.cpp  Scene.cpp
source/scene/controller/: BehaviourController.cpp  LifetimeController.cpp  MovementController.cpp
source/scene/movement/: GamePadMovement.cpp
source/scene/view/: HitboxView.cpp  SpriteView.cpp
source/system/: GameClock.cpp
tests/: ColorTests.hpp  RectTests.hpp  TransformTests.hpp  Vector2Tests.hpp
